fix(mobile): add overflow hidden to breadcrumbs list to prevent horizontal overflow

--- a/apps/website/app/scss/components/_breadcrumb.scss
+++ b/apps/website/app/scss/components/_breadcrumb.scss
@@ -9,6 +9,7 @@
     gap: 0.5rem;
     margin: 0;
     list-style: none;
+    overflow: hidden;
   }
 
   &__item {
